--- a/src/app/shared/components/dialogs/add-user/add-user.component.html
+++ b/src/app/shared/components/dialogs/add-user/add-user.component.html
@@ -21,6 +21,7 @@
       [class]="'formControl'"
       [error]="getErrorValidator('email', 'Email')"
       [form]="addUserForm"
+      [readonly]="isReadOnly"
     ></app-common-input>
 
     <app-common-input
