--- a/src/app/shared/components/layout/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/layout/components/sidebar/sidebar.component.html
@@ -61,6 +61,9 @@
         <li routerLink="assignments" routerLinkActive="active">
           <a><i class="fas fa-columns"></i><span *ngIf="inputIsExpand">Asssignments</span></a>
         </li>
+        <li routerLink="invites" routerLinkActive="active">
+          <a><i class="fas fa-columns"></i><span *ngIf="inputIsExpand">Invites</span></a>
+        </li>
 
       </ul>
     </nav>
