--- a/src/app/feature/user/components/user-assignment-details/user-assignment-details.component.html
+++ b/src/app/feature/user/components/user-assignment-details/user-assignment-details.component.html
@@ -1,7 +1,6 @@
 <div class="userListWrapper">
     <div class="userDetails">
         <h3>{{assignmentData?.title}}</h3>
-        <app-common-button (click)="assignmentStatus()">Change Status</app-common-button>
     </div>
     <mat-card>
         <mat-card-content><div class="userEvent">
@@ -22,6 +21,11 @@
                 </div>
                 <div class="col-sm-4">
                     <p> <span>Status:</span> {{assignmentData?.status}}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p> <span>Description:</span> {{assignmentData?.description}}</p>
                 </div>
             </div>
         </div></mat-card-content>
