--- a/src/app/shared/components/dialogs/add-assignment/add-assignment.component.html
+++ b/src/app/shared/components/dialogs/add-assignment/add-assignment.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="headerUserlist">
-    <h1>Add Assignment</h1>
+    <h1>{{data.eventType == 'create' ? 'Add Assignment' : 'Update Assignment'}}</h1>
     <mat-icon (click)="closeDialog()">cancel</mat-icon>
   </div>
 
