--- a/src/app/shared/components/layout/components/header/header.component.html
+++ b/src/app/shared/components/layout/components/header/header.component.html
@@ -14,7 +14,7 @@
         <div class="profileBar">
           <div class="topNavRight  align-center">
 
-            <app-account-components  [UserDetails]="UserDetails"></app-account-components>
+            <app-account-components  [userDetails]="userDetails"></app-account-components>
 
           </div>
         </div>
