--- a/src/app/feature/manager/components/m-assignment-list/m-assignment-list.component.html
+++ b/src/app/feature/manager/components/m-assignment-list/m-assignment-list.component.html
@@ -1,3 +1,3 @@
-<app-common-table [columnHeadings]="columnHeadings"></app-common-table>
+<!-- <app-common-table [columnHeadings]="columnHeadings"></app-common-table> -->
 
 
