--- a/src/app/shared/components/layout/components/header/account-components/account-components.component.html
+++ b/src/app/shared/components/layout/components/header/account-components/account-components.component.html
@@ -2,9 +2,9 @@
     <button mat-button [matMenuTriggerFor]="menu">
       <img
         class="roundedCircle profilePic"
-        src={{UserDetails.profileImage}}
+        src={{userDetails.profileImage}}
       />
-   {{UserDetails.name}}
+   {{userDetails.name}}
       <i class="fas fa-chevron-down"></i>
     </button>
     <mat-menu #menu="matMenu">
