--- a/src/app/feature/user/components/submit-assignment/submit-assignment.component.scss
+++ b/src/app/feature/user/components/submit-assignment/submit-assignment.component.scss
@@ -12,6 +12,7 @@
       margin: 15px 0 30px;
       align-items: center;
       width: 100%;
+      padding: 0 35px;
       h3{
         margin-bottom:  0 !important;
         font-weight: 700;
@@ -26,6 +27,15 @@
     .sumbitData{
       display: flex;
       justify-content: flex-end;
+      padding: 0 35px;
+    }
+    .row:before{
+
+    }
+    .description{
+      border-right: 1px solid #ccc;
+      p{
+        text-align: justify;
+      }
     }
   }
-  
