changes on user-assignment-detail

--- a/src/app/feature/user/components/user-assignment-details/user-assignment-details.component.html
+++ b/src/app/feature/user/components/user-assignment-details/user-assignment-details.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 mb-3">
-                    <p> <span>Created On :</span> {{assignmentData?.createdOn}}</p>
+                    <p> <span>Created On :</span> {{userData?.createdOn}}</p>
                 </div>
                 <div class="col-sm-4 mb-3">
                     <p> <span>Status :</span> {{assignmentData?.status}}</p>
@@ -43,7 +43,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 mb-3">
-                    <p> <span>Created On :</span> {{assignmentData?.createdOn}}</p>
+                    <p> <span>Created On :</span> {{userData?.createdOn}}</p>
                 </div>
                 <div class="col-sm-4 mb-3">
                     <p> <span>Status :</span> {{assignmentData?.status}}</p>
